--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 </div>
                 <div class="home-search">
                     <div class="home">
-                        <img src="home.png" alt="Home">
+                        <img src="home.jpg" alt="Home">
                     </div>
                     <!-- Search Bar with Icon -->
                     <div class="search-container">
@@ -32,7 +32,7 @@
                     </div>
                 </div>
                 <div class="user-profile">
-                    <img src="profile.png" alt="User Profile">
+                    <img src="profile.jpg" alt="User Profile">
                 </div>
             </div>
         </header>
@@ -71,7 +71,7 @@
                             <div class="playlist-item"><img src="eminem.jpg" alt="Punjabi Diwali Hits"></div>
                             <div class="playlist-item"><img src="The Beatles.jpg" alt="The Beatles Hits"></div>
                             <div class="playlist-item"><img src="death of slim shady.jpg" alt="The Beatles Hits"></div>
-                            <div class="playlist-item"><img src="Punjabi Diwali Hits.jpg" alt="Punjabi Diwali Hits">
+                            <div class="playlist-item"><img src="punjabi diwali hits.jpg" alt="Punjabi Diwali Hits">
                             </div>
                             <div class="playlist-item"><img src="eminem.jpg" alt="Punjabi Diwali Hits"></div>
                             <div class="playlist-item"><img src="punjabi vibes.jpg" alt="The Beatles Hits"></div>
@@ -86,7 +86,7 @@
                             </div>
                             <div class="recommended-item"><img src="imagine dragons.jpg" alt="Punjabi Diwali Hits">
                             </div>
-                            <div class="recommended-item"><img src="justin bieber.jpg" alt="The Beatles Hits"></div>
+                            <div class="recommended-item"><img src="justin beiber.jpg" alt="The Beatles Hits"></div>
                             <div class="recommended-item"><img src="salina gomez.jpg" alt="Punjabi Diwali Hits">
                             </div>
                         </div>
